@@ -110,6 +110,7 @@
     	<!-- 运行命令 mvn jetty:run 或    mvn -Djetty.port=9999 jetty:run -->
 		<!-- jetty9 极其以上版本用  -Djetty.http.port=9999 jetty:run 来指定端口 -->
 		<!--注意：jetty:run jetty:run-exploded的区别是：eclipse中run-exploded支持热部署-->
+		<!-- jvmargs:PermGen空间被移除了，取而代之的是Metaspace（JEP 122）。JVM选项-XX:PermSize与-XX:MaxPermSize分别被-XX:MetaSpaceSize与-XX:MaxMetaspaceSize所代替。 -->
 		<!-- -javaagent:E:/workspace-new/simplify-framework/weaving/target/weaving-0.0.1-SNAPSHOT.jar -Daop.properties=E:/workspace-new/simplify-framework/demo/src/main/resources/aop.properties -->
 		<plugin>
 
